--- a/DnsUpdater/DnsUpdater.csproj
+++ b/DnsUpdater/DnsUpdater.csproj
@@ -3,6 +3,11 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp2.1</TargetFramework>
+    <Version>3.0.0</Version>
+    <Authors>Ayden Hull</Authors>
+    <Company>AydenIO</Company>
+    <Product>DNS Updater</Product>
+    <Description>DNS Updater for DuckDNS and Amazon AWS Route 53</Description>
   </PropertyGroup>
 
   <ItemGroup>
